@@ -4,6 +4,9 @@ jsoup changelog
  * Refactored the Cleaner to traverse rather than recurse child nodes, to avoid the risk of overflowing the stack.
    <https://github.com/jhy/jsoup/issues/246>
 
+ * When parsing in XML mode, preserve XML declarations (<?xml ... ?>).
+   <https://github.com/jhy/jsoup/issues/242>
+
 *** Release 1.7.1 [2012-Sep-23]
  * Improved parse time, now 2.3x faster than previous release, with lower memory consumption.
 
